# synurang

./: .gitignore  BENCHMARK.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  analysis_options.yaml  ffigen.yaml  go.mod  go.sum  makefile  pubspec.yaml
android/: build.gradle
android/src/main/: AndroidManifest.xml
api/: core.proto
cmd/protoc-gen-synurang-ffi/: main.go
cmd/protoc-gen-synurang-ffi/templates/: cpp.h.tmpl  dart.dart.tmpl  go_default.go.tmpl  go_plugin_client.go.tmpl  go_plugin_server.go.tmpl  rust.rs.tmpl
cmd/server/: main.go
cpp/: synurang.hpp
example/: README.md  console_main.dart  pubspec.yaml
example/android/app/: build.gradle.kts
example/api/: example.proto
example/cmd/client/: main.go
example/cmd/server/: main.go
example/go/service/: file_service.go  greeter.go  stream_impl.go
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/test/: large_stream_test.dart  widget_test.dart
ios/: synurang.podspec
lib/: synurang.dart  synurang_bindings_generated.dart
linux/: CMakeLists.txt
macos/: synurang.podspec
pkg/api/: core.pb.go  core_ffi.pb.go  core_grpc.pb.go  ffi_client_conn_test.go  import_test.go
pkg/debug/: goroutine_tracker.go  goroutine_tracker_release.go  goroutine_tracker_test.go
pkg/plugin/: server.go
pkg/service/: cache.go  cache_test.go  config.go  ffi_utils.go  health.go  server.go  server_test.go  stream_handler.go  stream_handler_test.go  test_handlers.go
pkg/synurang/: plugin.go  plugin_conn.go  plugin_test.go  plugin_unix.go  plugin_windows.go  synurang.go  synurang_test.go
rust/synurang/: Cargo.toml
src/: CMakeLists.txt
test/: cross_proto_import_test.dart  ffi_client_channel_test.dart  full_verification_and_benchmark_test.dart  initialization_test.dart  mixed_rpc_race_test.dart  proto_import_test.dart  stress_test.dart  synurang_test.dart  test_cpp_gen.sh  test_rust_gen.sh
test/cpp_ffi/: backend.cc  cpp_integration_test.dart  ffi_channel_test.cc  makefile
test/go_ffi/: ffi_client_conn_test.go  go.mod
test/rust_ffi/: Cargo.toml  rust_integration_test.dart
windows/: CMakeLists.txt
(+25 files in other folders)
